CNSDEVCOLECT/force-app/main/default/objects/HomologacionPerfilesRoles__mdt/HomologacionPerfilesRoles__mdt.object-meta.xml
<CustomObject>
    <label>HomologacionPerfilesRoles</label>
    <pluralLabel>HomologacionPerfilesRoles</pluralLabel>
</CustomObject>