CNSDEVCOLECT/force-app/main/default/objects/HomologacionPerfilesRoles__mdt/fields/CargoNameSF__c.field-meta.xml
<CustomField>
    <fullName>CargoNameSF__c</fullName>
    <description>Nombre de Cargo para recursos humanos</description>
    <label>CargoNameSF</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>