CNSDEVCOLECT/force-app/main/default/objects/HomologacionPerfilesRoles__mdt/fields/CompanyNameSF__c.field-meta.xml
<CustomField>
    <fullName>CompanyNameSF__c</fullName>
    <description>Nombre de compañía para recursos humanos</description>
    <label>CompanyNameSF</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>