CNSDEVCOLECT/force-app/main/default/objects/HomologacionPerfilesRoles__mdt/fields/DepartamentoNameSF__c.field-meta.xml
<CustomField>
    <fullName>DepartamentoNameSF__c</fullName>
    <description>Nombre de departamento para recursos humanos</description>
    <label>DepartamentoNameSF</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>