CNSDEVCOLECT/force-app/main/default/objects/HomologacionPerfilesRoles__mdt/fields/FuncionNameSF__c.field-meta.xml
<CustomField>
    <fullName>FuncionNameSF__c</fullName>
    <description>Función para recursos humanos</description>
    <label>FuncionNameSF</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>