CNSDEVCOLECT/force-app/main/default/objects/HomologacionPerfilesRoles__mdt/fields/PerfilNameSF__c.field-meta.xml
<CustomField>
    <fullName>PerfilNameSF__c</fullName>
    <description>Perfil para recursos humanos</description>
    <label>PerfilNameSF</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>