CNSDEVCOLECT/force-app/main/default/objects/HomologacionPerfilesRoles__mdt/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>MasterLabel</columns>
    <columns>CompanyNameSF__c</columns>
    <columns>CargoNameSF__c</columns>
    <columns>DepartamentoNameSF__c</columns>
    <columns>FuncionNameSF__c</columns>
    <columns>PerfilNameSF__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>